k8s/Task18/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
  namespace: ivolve
spec:
  ports:
  - port: 3306
  clusterIP: None 
  selector:
    app: mysql
