k8s/Task18/mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mysql
  namespace: ivolve
spec:
   
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
   
  - from:
    - podSelector:
        matchLabels:
          app: nodejs
      
    ports:
    - protocol: TCP
      port: 3306
